# dialect

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
analysis/: __init__.py  _lit_workflow_template.js  analyze_dialect_rho_distributions.py  analyze_gene_pair_sample_cooccurrences.py  bmr_calibration.py  bmr_fdr_comparison.py  bmr_overcorrection_check.py  bmr_passenger_proportions.py  bmr_sensitivity.py  build_atlas_data.py  burden_aware_co_demo.py  cbase_highly_ranked_passengers.py  cbase_results_analysis.py  confirm_co_burden_confound.py  data_overview_table.py  decoy_genes_top_ranking_pairs.py  discover_persample_bmr.py  epsilon_threshold_across_subtypes.py  extract_consensus_networks.py  gene_driver_rate_vs_pairwise_marginals.py  generate_cbase_bmr_inconsistency_plots.py  generate_dialect_epsilon_threshold_by_sample_plot.py  generate_gene_mutation_variability_plots.py  generate_likely_passenger_proportion_plot.py  generate_likely_passenger_proportion_plots.py  generate_marginal_tau_distribution_plot.py  generate_mutation_count_variation_by_subtype_plot.py  generate_passenger_mutation_rate_distribution_plot.py  generate_sample_mutation_counts_by_subtype_plot.py  generate_single_gene_log_likelihood_plot.py  generate_somatic_mutation_count_distribution_plot.py  generate_tcga_pancan_summary_tex_table.py  generate_top_ranked_interactions_network_plots.py  generate_top_ranked_interactions_tex_tables.py  group_networks_by_cancer_type.py  hypermutator_mutation_distribution.py  interaction_cooccurring_samples.py  likely_passenger_proportion_across_methods.py  mutsig_drivers.py  mutsig_lambda_co.py  (+11 more)
archive/: LICENSE  requirements.txt  temp.sh
archive/dialect/: cbase_utils.py  core.py  utils.py
archive/notebooks/: cbase_utils.py  dialect  negative_discover_pvals.csv  playground.ipynb  positive_discover_pvals.csv  simulations  utils.py
archive/simulations/: run_simulation.py
bmrs/cbase/: cbase_params_v1.2.py
cbase/: run.sh
cbase/reference/: README.md
cbase/scripts/: build_bmr_table.py  build_cnt_mtx.py  cbase_qvals_v1.2.py  convert_maf_to_vcf.py
comparisons/fishers/: run_fishers.py
comparisons/wesme/: setup.py  wesme_utils.py
data/decoy_genes/: ACC_decoy_genes.txt  BLCA_decoy_genes.txt  BRCA_decoy_genes.txt  CESC_decoy_genes.txt  CHOL_decoy_genes.txt  COADREAD_decoy_genes.txt  CRAD_decoy_genes.txt  DLBC_decoy_genes.txt  ESCA_decoy_genes.txt  GBM_decoy_genes.txt  HNSC_decoy_genes.txt  KICH_decoy_genes.txt  KIRC_decoy_genes.txt  KIRP_decoy_genes.txt  LAML_decoy_genes.txt  LGG_decoy_genes.txt  LIHC_decoy_genes.txt  LUAD_decoy_genes.txt  LUSC_decoy_genes.txt  MESO_decoy_genes.txt  OV_decoy_genes.txt  PAAD_decoy_genes.txt  PCPG_decoy_genes.txt  PRAD_decoy_genes.txt  README.md  SARC_decoy_genes.txt  SKCM_decoy_genes.txt  STAD_decoy_genes.txt  TGCT_decoy_genes.txt  THCA_decoy_genes.txt  THYM_decoy_genes.txt  UCEC_decoy_genes.txt  UCS_decoy_genes.txt  UVM_decoy_genes.txt
data/event_level_likely_passengers/: KICH.txt  KIRC.txt  KIRP.txt  LAML.txt  LGG.txt  LIHC.txt  LUAD.txt  LUSC.txt  MESO.txt  OV.txt  README.md  SARC.txt  THCA.txt  UCS.txt
data/gene_level_likely_passengers/: ACC.txt  BLCA.txt  BRCA.txt  CESC.txt  CHOL.txt  CRAD.txt  DLBC.txt  ESCA.txt  GBM.txt  HNSC.txt  KICH.txt  KIRC.txt  KIRP.txt  LAML.txt  LGG.txt  LIHC.txt  LUAD.txt  LUSC.txt  MESO.txt  OV.txt  PAAD.txt  PCPG.txt  PRAD.txt  SARC.txt  SKCM.txt  STAD.txt  TGCT.txt  THCA.txt  THYM.txt  UCEC.txt  UCS.txt  UVM.txt
data/likely_passenger_gene_lists/: ACC.txt  BLCA.txt  BRCA.txt  CESC.txt  CHOL.txt  CRAD.txt  DLBC.txt  ESCA.txt  GBM.txt  HNSC.txt  PCPG.txt  THYM.txt  UCEC.txt  UVM.txt
data/references/: OncoKB_Cancer_Gene_List.tsv  README.md  (+2 more)
dialect/: core.py  utils.py
ourmethod/: dialect.sh
scripts/: __init__.py  dialect_msbatch.sh  dialect_ssbatch.sh  download_cbioportal_mafs.py  identify_decoy_genes.py  identify_likely_passenger_genes.py  msbatch.sh  run_all_msk.sh  run_all_pancan.sh  run_cohort_pipeline.sh  run_dialect_pipeline.sh  run_dialect_pipeline_local.sh  run_everything.sh  run_matrix_simulation_pipeline.sh  run_mutsig_octave.sh  simulation_msbatch.sh  simulation_ssbatch.sh  split_cohort_by_subtype.py  split_msk_by_cancer_type.py  ssbatch.sh
tests/: __init__.py  test_api.py  test_architecture.py  test_bmr.py  test_dig_bmr.py  test_gene.py  test_interaction.py  test_models.py  test_stats.py
(+166 files in other folders)
