[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dialect"
dynamic = ["version"]
description = "An EM latent-variable model for mutual exclusivity and co-occurrence between cancer driver mutations, accounting for the background mutation rate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Ahmed Shuaibi", email = "ashuaibi@princeton.edu" }]
keywords = [
    "cancer-genomics",
    "driver-mutations",
    "mutual-exclusivity",
    "co-occurrence",
    "background-mutation-rate",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "networkx",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "upsetplot",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-regressions",
    "hypothesis",
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx",
    "furo",
    "myst-nb",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
]

[project.scripts]
dialect = "dialect.__main__:main"

[project.urls]
Homepage = "https://github.com/raphael-group/dialect"
Repository = "https://github.com/raphael-group/dialect"
Preprint = "https://www.biorxiv.org/content/10.1101/2024.04.24.590995v1"

# --------------------------------------------------------------------------- #
#                              BUILD (hatchling)                               #
# --------------------------------------------------------------------------- #
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dialect/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dialect"]

[tool.hatch.build.targets.sdist]
include = ["src/dialect", "tests", "README.md", "LICENSE"]

# --------------------------------------------------------------------------- #
#                                   TOOLING                                    #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 88
exclude = ["external/", "src/dialect/_version.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["INP001", "D100", "A001"]
"tests/*" = ["S101", "INP001", "D100", "D103", "ANN", "PLR2004"]
"analysis/*" = ["INP001", "T201", "S603", "S607", "PLR2004", "C901", "PLR0912", "PLR0915"]
"src/dialect/utils/simulate.py" = ["PLR0913"]
"src/dialect/utils/plotting.py" = ["PLR0913", "FBT001"]
"src/dialect/utils/postprocessing.py" = ["FBT001", "PLR0913"]
"src/dialect/baselines/wesme.py" = ["E402"]
"src/dialect/baselines/megsa.py" = ["S603", "S607"]
"src/dialect/utils/logger.py" = ["SLF001", "FBT001", "FBT002"]
"src/dialect/bmr/_cbase_run.py" = ["S603"]
"src/dialect/utils/identify.py" = ["FBT001"]
"src/dialect/utils/argument_parser.py" = ["FBT001", "FBT002", "PLR0913", "C901"]
"src/dialect/baselines/runner.py" = ["FBT001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
