[metadata]
name = dialect
version = 1.0.0
author = Ahmed Shuaibi
description = A method for identifying interactions between driver mutations in cancer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphael-group/dialect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    dialect = src/dialect
    external = external
include_package_data = True
python_requires = >=3.9
install_requires =
    pandas
    numpy

[options.packages.find]
where =
    src
    external

[options.package_data]
exernal = *.py

[options.entry_points]
console_scripts =
    dialect = dialect.__main__:main
